# python-hello_world

jd/: pyproject.toml
jd/seen/: mai.ipynb  mai.py
