[tool.poetry]
name = "seen"
version = "0.1.0"
description = ""
authors = ["Sara Aziz <umaraaziz456@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
